--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "test": "jest --watchAll"
+    "test": "jest --forceExit"
   },
   "repository": {
     "type": "git",
